@@ -11,8 +11,10 @@
 #undef GTKMM_ATKMM_ENABLED
 #undef GTKMM_MAEMO_EXTENSIONS_ENABLED
 
-
 #ifdef GLIBMM_CONFIGURE
+
+#undef GTKMM_STATIC_LIB
+
 /* compiler feature tests that are used during compile time and run-time
    by gtkmm only. */
 
@@ -28,8 +30,14 @@
 
 #endif /* GLIBMM_CONFIGURE */
 
+// Enable DLL-specific stuff only when not building a static library
+#if !defined(__CYGWIN__) && defined(__MINGW32__) && !defined(GTKMM_STATIC_LIB)
+  #define GTKMM_DLL
+#elif defined(_MSC_VER)
+  #define GTKMM_DLL
+#endif
 
-#ifdef GLIBMM_DLL
+#ifdef GTKMM_DLL
   #if defined(GTKMM_BUILD) && defined(_WINDLL)
     // Do not dllexport as it is handled by gendef on MSVC
     #define GTKMM_API 
@@ -41,7 +49,7 @@
   #endif /* GTKMM_BUILD - _WINDLL */
 #else
   #define GTKMM_API
-#endif /* GLIBMM_DLL */
+#endif /* GTKMM_DLL */
 
 #undef GTKMM_DISABLE_DEPRECATED
 
