@@ -1,3 +1,13 @@
+2009-05-31  Armin Burgmeier  <armin@openismus.com>
+
+	* configure.ac: Define GTKMM_STATIC_LIB when a static gtkmm library is
+	built.
+
+	* gtk/gtkmmconfig.h.in: Define GTKMM_DLL on Windows when building a
+	DLL, instead of using GLIBMM_DLL, so that it's possible to build
+	glibmm as a static library and gtkmm as a DLL, or vice versa. Bug
+	#583657.
+
 2009-05-18  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/iconview.hg: get_model(): Use refreturn to correct the ref-counting.
